# cold-frame

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: test-gate.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
assets/: gen_demo.py  gen_hero.py
cold_frame/: __init__.py  api.py  branding.py  cli.py  constants.py  exceptions.py  mcp.py  models.py  observability.py
cold_frame/eval/: __init__.py  capture_bench.py  harness.py  moat_bench.py  recall_bench.py
cold_frame/eval/datasets/: cross_scope.yaml  dedup.yaml  extraction.yaml  forgetting.yaml  freshness.yaml  precision_at_k.yaml  procedural.yaml  self_edit.yaml  token_budget.yaml
cold_frame/forget/: __init__.py  consolidate.py  worker.py
cold_frame/integrations/: __init__.py  claude_code.py
cold_frame/llm/: __init__.py  base.py  claude_cli.py  local.py  sampling.py  tokens.py
cold_frame/procedural/: __init__.py  optimize.py
cold_frame/prompts/: __init__.py  admission.py  conflict.py  consolidate.py  extract.py  procedural.py  rerank.py  scope.py
cold_frame/read/: __init__.py  budget.py  fuse.py  rerank.py  retrieve.py  strength.py
cold_frame/store/: __init__.py  _ddl.py  base.py  sqlite.py
cold_frame/ui/: __init__.py  contract.py  server.py
cold_frame/ui/prototype/: README.md  gen_sample.py  memory-field.html  memory_field.json  thermal-persistence.md
cold_frame/write/: __init__.py  admission.py  core.py  extract.py
docs/: DECISIONS.en.md  README.md  SPEC.md  decisions.md  demo.md  launch.md  product-strategy.md  readiness-gaps.md  requirements.md  risks.md  roadmap.md  security-spec.md  tdd-plan.md  ux-design.md
docs/analysis/: blueprint-combine-the-best.md  build-vs-use-decision.md  design.md  language-decision.md  memory-systems-analysis.md
docs/analysis/source-analysis/: RAW-source-analysis.md  analyses.json
examples/: README.md  quickstart.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/scripts/: gen-ts.mjs  restore-gitkeep.mjs  vendor-p5.mjs
frontend/src/: App.vue  api.generated.ts  api.schema.json  api.ts  appError.ts  main.ts  router.ts  style.css  vite-env.d.ts
frontend/src/components/: EmptyState.vue  MemoryField.vue  thermalSketch.ts
frontend/src/views/: AboutView.vue  HeroView.vue  InspectorView.vue  NotFoundView.vue  SearchView.vue  TriageView.vue
packaging/demo/: README.md  demo.tape
packaging/homebrew/: RELEASE.md  bump-tap.sh  cold-frame.rb  requirements-mcp.txt
packaging/plugin/: .mcp.json  PUBLISHING.md  README.md
packaging/plugin/.claude-plugin/: plugin.json
packaging/plugin/hooks/: hooks.json
packaging/plugin/skills/remember-facts/: SKILL.md
packaging/standalone/: README.md  build.sh  coldframe.icns  launcher.py
scripts/: check_ui_bundle.py  gen_api_types.py
tests/: __init__.py  conftest.py  test_add_search.py  test_admission.py  test_api_contract.py  test_budget.py  test_capture_bench.py  test_claude_cli.py  test_cli.py  test_conflict.py  test_consent.py  test_constants_drift.py  test_core_deps.py  test_correct.py  test_dedup.py  test_embedder_resolve.py  test_encryption.py  test_eval_suites.py  test_examples.py  test_extract.py  test_forget.py  test_fuse.py  test_harness.py  test_hooks.py  test_import_events.py  test_jobs.py  test_mcp.py  test_mcp_stdio_live.py  test_meta_boost.py  test_moat_bench.py  test_observability.py  test_pii_redaction.py  test_plugin.py  test_plugin_manifest.py  test_procedural.py  test_recall_bench.py  test_reembed.py  test_rerank.py  test_sampling.py  test_self_edit.py  (+9 more)
tests/perf/: test_perf_smoke.py
